server/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: account_app
  name: account_app
spec:
  replicas: 1
  selector:
    matchLabels:
      run: account_app
  template:
    metadata:
      labels:
        run: account_app
    spec:
      containers:
      - image: codebit/codebit_account:latest
        name: account_app
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: account_db
  name: account_db
spec:
  replicas: 1
  selector:
    matchLabels:
      run: account_db
  template:
    metadata:
      labels:
        run: account_db
    spec:
      containers:
      - image: mongo
        name: account_db
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: /data/db
          name: mongo-volume
          subPath: db
      volumes:
      - name: mongo-volume
        persistentVolumeClaim:
          claimName: account_claim
