server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: account_app
  name: account_app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: account_app
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: account_db
  name: account_db
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    run: account_db
